# Market-Maker

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  architecture.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  tasks.md  test_market_data.py  test_parquet_data.py  test_task_1_1.py
.github/workflows/: ci.yml
docker/: README.md  docker-compose.yml  prometheus.yml
docs/: architecture.md
scripts/: generate_test_data.py  inspect_parquet.py  setup-dev.sh  start_dashboard.sh  test_binance_ws.py  test_recorder.py
src/: cli.py
src/backtest/: simulator.py
src/data_feed/: binance_ws.py  parquet_writer.py  recorder.py  schemas.py
src/features/: imbalance.py  micro_price.py  volatility.py
src/live/: binance_gateway.py  engine.py  healthcheck.py
src/lob/: match_engine.cpp  order_book.py
src/models/: __init__.py  fill_prob.py  inventory_skew.py  size_calculator.py
src/strategy/: ev_maker.py  naive_maker.py
tests/: test_match_engine.py
tests/backtest/: test_ev_maker_backtest.py
tests/integration/: test_data_collection.py  test_ev_maker_backtest.py  test_ev_maker_inventory.py  test_fill_prob_2hour.py  test_fill_prob_integration.py  test_grafana_dashboard.py  test_microprice_integration.py
tests/unit/: test_binance_gateway.py  test_binance_ws.py  test_cli.py  test_dummy.py  test_ev_maker.py  test_fill_prob.py  test_healthcheck.py  test_imbalance.py  test_inventory_edge.py  test_inventory_skew.py  test_live_engine.py  (+8 more)
venv3.11/: pyvenv.cfg
venv3.12/: pyvenv.cfg
venv311/: pyvenv.cfg
venv312/: pyvenv.cfg
(+6 files in other folders)
