[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market_maker"
version = "0.1.0"
description = "A high-frequency market making system for cryptocurrency markets"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Josh Lee", email = "joshhlee614@gmail.com"},
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "redis>=4.5.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=12.0.0",
    "websockets>=11.0.0",
    "aiohttp>=3.8.0",
    "ccxt>=4.0.0",
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]
performance = [
    "Cython>=3.0.0",
    "pybind11>=2.10.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 